--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 :root{
-  --primary-color: rgb(202, 98, 1);
+  --primary-color: rgb(250, 121, 0);
   --primary-color-disabled: rgb(97, 48, 1);
   --primary-color-transparent: rgb(97, 48, 1, 0.4);
 }
@@ -29,7 +29,7 @@ body {
   border: none;
   cursor: pointer;
   box-shadow: 0px 5px 0px var(--primary-color-disabled);
-  transition: 0.3s;
+  transition: 0.1s;
   background-color: transparent;
   color: white;
 }
@@ -42,7 +42,7 @@ body {
 
 .btn:active{
   translate: 0 4px;
-  box-shadow: 0 0px 0px;
+  box-shadow: 0 0px 0px var(--primary-color-disabled);
 }
 
 .border{
@@ -59,7 +59,7 @@ body {
   cursor: pointer;
   border-radius: 10px;
   box-shadow: 0px 5px 0px var(--primary-color-disabled);
-  transition: 0.2s;
+  transition: 0.1s;
 }
 
 .highlight:hover {
@@ -86,6 +86,7 @@ body {
   height: 90vh;
   overflow-x: hidden;
   overflow-y: scroll;
+  justify-content: space-evenly;
 }
 
 .dish-card {
@@ -95,7 +96,8 @@ body {
   border-radius: 12px;
   overflow: hidden;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-  max-width: 400px;
+  width: 400px;
+  height: 160px;
   transition: transform 0.2s;
   margin: 8px;
 }
@@ -105,25 +107,31 @@ body {
 }
 
 .dish-image {
-  width: 100px;
+  width: 130px;
   object-fit: cover;
+  -webkit-mask-image: linear-gradient(to right, black 45%, transparent);
 }
 
 .dish-details {
-  padding: 15px;
+  position: absolute;
+  left: 115px;
+  width: 260px;
+  padding: 10px;
   flex: 1;
 }
 
 .dish-name {
   font-size: 1.5rem;
-  color: var(--primary-color);
+  color: rgb(250, 162, 0);
   margin: 0 0 10px;
 }
 
 .dish-description {
   font-size: 0.9rem;
   margin: 0 0 15px;
-  color: #cfcfcf;
+  color: rgba(255, 166, 0, 0.831);
+  font-weight: 200;
+  height: 40px;
 }
 
 .price-quantity {
@@ -143,89 +151,52 @@ body {
   align-items: center;
 }
 
-/* #cart-slider {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  width: 300px;
-  max-height: 400px;
-  overflow-y: auto;
-  background: black;
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s ease;
-}
-
-#cart-slider.cart-closed {
-  transform: translateX(90%);
-}
-
-#cart-toggle {
-  position: absolute;
-  bottom: 10px;
-  right: 10px;
-  width: 40px;
-  height: 40px;
-  background: #ff5722;
-  color: #fff;
-  border: none;
-  border-radius: 50%;
-  cursor: pointer;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-}
-
-#cart-content {
-  padding: 20px;
-  display: none;
-}
-
-#cart-slider.cart-open #cart-content {
-  display: block;
-} */
-
 #cart-slider{
   position: fixed;
   bottom: 10px;
   right: 16px;
   width: 300px;
   padding: 10px;
-}
-
-#cart-slider{
-  max-height: 400px;
-  background: rgba(198, 97, 1, 0.4);
-  backdrop-filter: blur(8px);
+  max-height: 28px;
+  background: rgba(250, 121, 0, 0.511);
+  backdrop-filter: blur(20px);
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-  transition: 0.3s;
-}
-
-#cart-slider:hover{
-  height: 150px;
-}
-
-#cart-slider.cart-closed{
-  height: 28px;
-  background: rgba(198, 97, 1, 0.4);
-  backdrop-filter: blur(8px);
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-  transition: 0.3s;
+  transition: 0.5s;
+  overflow: hidden;
+  visibility: hidden;
 }
 
 #cart-items{
-  max-height: 100px;
+  max-height: 200px;
+  margin-top: 12px;
   overflow-y: scroll;
 }
 
 #cart-header {
   font-size: larger;
-  display: flex; /* Enables Flexbox */
-  justify-content: space-between; /* Positions elements at opposite ends */
-  align-items: center; /* Vertically centers items */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.cart-closed #cart-content {
-  display: none;
+.cart-info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 5px 0 20px 20px;
+}
+
+.quantity-mod {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 5px 6px 10px;
+  width: 90px;
+  height: 20px;
+}
+
+#cart-total {
+  font-size: large;
+  font-weight: 800;
 }
