--- a/10.Restaurants_site/styles.css
+++ b/10.Restaurants_site/styles.css
@@ -14,6 +14,12 @@ body {
   background-size: cover;
 }
 
+.concert-one-title {
+  font-family: "Concert One", sans-serif;
+  font-style: normal;
+  font-stretch: ultra-expanded;
+}
+
 .navbar {
   display: flex;
   justify-content: space-between;
@@ -95,7 +101,7 @@ body {
   backdrop-filter: blur(2px);
   border-radius: 12px;
   overflow: hidden;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0px 8px rgba(0, 0, 0, 0.597);
   width: 400px;
   height: 160px;
   transition: transform 0.2s;
@@ -162,7 +168,7 @@ body {
   backdrop-filter: blur(20px);
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-  transition: 0.5s;
+  transition: 0.5s ease-out;
   overflow: hidden;
   visibility: hidden;
 }
